Fix unused parameter warnings when !ENABLE(WEB_AUDIO) https://bugs.webkit.org/show_bug.cgi?id=259002

Reviewed by Youenn Fablet.

Add `UNUSED_PARAM`s to the `!ENABLE(WEB_AUDIO)` block.

* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::isTypeExposedToGlobalObject):

Canonical link: https://commits.webkit.org/265921@main